# prototool

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: attic.yml  rust.yml
content/de/protokolle/: 2024-04-06.md
src/: cli.rs  events.rs  lib.rs  main.rs  newpost.rs  post.rs  protokoll.rs  raete.rs  sitzung.rs
src/cli/: create.rs  generate.rs  mod.rs  prototool.rs
src/generate/: mod.rs
src/protokoll/: events.rs  mod.rs  person.rs  raete.rs  sitzung.rs  tops.rs
templates/: post.md  protokoll.md
tests/: post.md  protokoll-no-tops.md  protokoll-vv.md  protokoll-with-events.md  protokoll-with-rate-no-beschluss.md  protokoll-with-rate.md  protokoll-with-tops.md
