[package]
name = "prototool"
description = "Tool zum automatischen generieren von Protokollen und Website Posts"
version = "2.4.0"
edition = "2021"

[lib]
name = "prototool"
path = "src/lib.rs"

[[bin]]
name = "prototool"
path = "src/cli/prototool.rs"

[dependencies]
anyhow = "1"
askama = "0"
chrono = { version = "0", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
opener = "0"
reqwest = { version = "0", features = ["blocking", "json", "rustls-tls", "http2", "macos-system-configuration", "charset"], default-features = false }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
arboard = {version = "3", features = ["windows-sys", "wayland-data-control"], default-features = false }
markdown = "=1.0.0-alpha.21"
serde_yaml = "0"
toml = { version = "0", features = ["parse"], default-features = false }
inquire = { version = "0", default-features = false, features = ["crossterm"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0"
rustix = { version = "0", features = ["stdio"], default-features = false  }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
